z-index fix.

--- a/bones-admin.css
+++ b/bones-admin.css
@@ -24,7 +24,7 @@ select.editable {
   left:0px;
   right:0px;
   top:0px;
-  z-index:5;
+  z-index:100;
 
   height:0px;
   padding:0px 40px 0px 0px;
